# agentmail

./: .gitignore  87aaa199.txt  BRUNSON_AUDIT_SCORECARD_2026-07-18.md  CHANGELOG.md  CLAUDE.md  DEPLOY-INSTRUCTIONS.md  DISTRIBUTION.md  DREAM100.md  Dockerfile  HERMES_REPORT_COMPLIANCE_PRO_REMOVAL.md  HERMES_REPORT_CONVERSION_REPAIR.md  HERMES_TASKS_SANCTIONSAI_AEO.md  HERMES_TASK_COMPLIANCE_GLOSSARY.md  HERMES_TASK_CONVERSION_REPAIR.md  LICENSE  OWNER_ACTIONS_SANCTIONSAI.md  QA_SECURITY_SPEED_AUDIT_2026-07-19.md  README.md  __init__.py  api.py  api.py.bak  billing.py  cli.py  core.py  enrich_thin_pages.py  fly.toml  glama.json  glossary.json  image-sitemap.xml  live_test_sms.py  llms.txt  mailtm.py  mcp_server.py  ofac-enforcement-2026.csv  otp.py  pyproject.toml  sitemap-index.xml  sitemap-pseo.xml  sitemap.xml  smithery.yaml  (+1 more)
aeo/: action-plan.md  brand-gap-analysis.csv  reddit-ml-post.md  show-hn-post.md  twitter-post.txt
alternatives-to/: chainalysis.html  dow-jones-risk.html  dow-jones.html  elliptic.html  refinitiv.html
best/: best-aml-compliance-tools.html  best-ofac-screening-apis.html
checklists/: crypto-ofac-checklist.html  ofac-compliance-checklist.html  sanctions-risk-assessment-checklist.html  shipper-ofac-checklist.html
compliance/: __init__.py  base.py  mock.py  osint.py
cost-of/: chainalysis-pricing.html  complyadvantage-pricing.html  refinitiv-worldcheck-pricing.html
data/: feed.json  index.html
docs/: DEPLOY.md  LAUNCH_POSTS.md
dream-100/: index.html
email_templates/: agent_page_new.html  builder.py  dashboard.html  footer.html  header.html  landing_new.html  teardown.html
faq/: do-crypto-exchanges-need-ofac-screening.html  how-often-does-ofac-update-sanctions.html  how-often-ofac-list-updated.html  how-often-update-sdn-list.html  how-to-comply-with-ofac.html  how-to-screen-crypto-wallets-ofac.html  is-crypto-ofac-screening-required.html  is-ofac-screening-required-for-crypto.html  is-ofac-screening-required.html  what-are-ofac-penalties.html  what-happens-if-you-violate-ofac.html  what-is-ofac-screening.html
guides/: recordkeeping-requirements.html  risk-assessment-guide.html  sanctions-compliance-program.html  voluntary-self-disclosure.html
learn/: crypto-compliance-guide.html  crypto-sanctions-risk.html  index.html  ofac-compliance-guide.html  sanctions-risk-assessment.html  (+1 more)
sms/: __init__.py  (+4 more)
(+140 files in other folders)
